Fix layout issue by changing max-width of mainbox to 85vw

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     margin-top: 2%;
     margin-bottom: 2%;
     background-color: rgba(236, 253, 245, 1);
-    max-width: max-content;
+    max-width: 85vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
